# rs-row2pgcsv

./: Cargo.toml  README.md  lint.sh
examples/struct2csv/: .gitignore  Cargo.toml  run.sh
examples/struct2csv/src/: main.rs
src/: arr.rs  lib.rs
