[package]
name = "struct2csv"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 23

[dependencies.row2pgcsv]
path = "../.."

[dependencies.serde]
version = "1.0.196"
default-features = false
features = [
    "std",
    "derive",
]

[dependencies.csv]
version = "1.3.0"
default-features = false
features = [
]

[features]
default = [
]
